# media-player

./: .gitignore  CMakeLists.txt  README.md  cmake-build  run  run-test
src/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  CurrentMetadataDisplayer.cpp  CurrentMetadataDisplayer.h  CurrentMetadataDisplayer.ui  CustomSlider.cpp  CustomSlider.h  MainWindow.cpp  MainWindow.ui  MainWindow_OLD.cpp  MainWindow_OLD.hpp  PlaybackCtrls.cpp  PlaybackCtrls.h  PlayerGUI.cpp  PlayerGUI.h  PlayerGUI.ui  Track.cpp  Track.h  TrackList.cpp  TrackList.h  TrackList.ui  TrackListItem.cpp  TrackListItem.h  main.cpp
test/: CMakeLists.txt  MainWindowTest.cpp  MainWindowTest.hpp  main.cpp
