set(BINARY ${CMAKE_PROJECT_NAME})
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
file(GLOB SOURCES *.cpp *.h *.ui)
set(SOURCES ${SOURCES})
add_executable(${BINARY} ${SOURCES})
add_library(${BINARY}_lib STATIC ${SOURCES})
find_package(Qt5 COMPONENTS Widgets Multimedia REQUIRED)
target_link_libraries(${BINARY} Qt5::Widgets Qt5::Multimedia tag)
target_link_libraries(${BINARY}_lib Qt5::Widgets Qt5::Multimedia tag)
set(EXECUTABLE_OUTPUT_PATH ../)
