set(BINARY ${CMAKE_PROJECT_NAME}_test)
set(CMAKE_AUTOMOC ON)
file(GLOB TEST_SOURCES *.hpp *.cpp)
set(SOURCES ${TEST_SOURCES})
add_executable(${BINARY} ${TEST_SOURCES})
add_test(NAME ${BINARY} COMMAND ${BINARY})
find_package(Qt5Test REQUIRED)
find_package(Qt5 COMPONENTS Widgets REQUIRED)
target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib Qt5::Widgets Qt5::Test)
set(EXECUTABLE_OUTPUT_PATH ../)
